## Process this file with automake to produce Makefile.in

INCLUDES = \
	-DG_LOG_DOMAIN=\"libfo\" \
	$(GOBJECT_CFLAGS)	\
	-I..

LDADDS = @STRIP_BEGIN@	\
	@GLIB_LIBS@	\
@STRIP_END@

# libfo-text-property.la is a convenience library containing
# properties that depend on Pango.
noinst_LTLIBRARIES = libfo-property.la libfo-text-property.la

libfo_property_includedir = $(includedir)/libfo-0.5/libfo/property

libfo_property_include_HEADERS = \
	fo-property.h

# Properties that don't map to Pango attributes.
libfo_property_la_SOURCES =	\
	$(libfo_property_include_HEADERS)	\
	fo-all-property.h	\
	fo-property-eval.c	\
	fo-property-eval.h	\
	fo-property.c		\
	fo-property-private.h		\
	fo-property-type-condity.c	\
	fo-property-type-condity.h	\
	fo-property-type-condity-private.h	\
	fo-property-background-image.c	\
	fo-property-background-image.h	\
	fo-property-block-progression-dimension.c	\
	fo-property-block-progression-dimension.h	\
	fo-property-block-progression-dimension-minimum.c	\
	fo-property-block-progression-dimension-minimum.h	\
	fo-property-block-progression-dimension-optimum.c	\
	fo-property-block-progression-dimension-optimum.h	\
	fo-property-block-progression-dimension-maximum.c	\
	fo-property-block-progression-dimension-maximum.h	\
	fo-property-border-after-color.c	\
	fo-property-border-after-color.h	\
	fo-property-border-after-precedence.c	\
	fo-property-border-after-precedence.h	\
	fo-property-border-after-style.c	\
	fo-property-border-after-style.h	\
	fo-property-border-after-width.c	\
	fo-property-border-after-width.h	\
	fo-property-border-before-color.c	\
	fo-property-border-before-color.h	\
	fo-property-border-before-precedence.c	\
	fo-property-border-before-precedence.h	\
	fo-property-border-before-style.c	\
	fo-property-border-before-style.h	\
	fo-property-border-before-width.c	\
	fo-property-border-before-width.h	\
	fo-property-border-bottom.c	\
	fo-property-border-bottom.h	\
	fo-property-border-bottom-color.c	\
	fo-property-border-bottom-color.h	\
	fo-property-border-bottom-style.c	\
	fo-property-border-bottom-style.h	\
	fo-property-border-bottom-width.c	\
	fo-property-border-bottom-width.h	\
	fo-property-border-color.c	\
	fo-property-border-color.h	\
	fo-property-border-collapse.c	\
	fo-property-border-collapse.h	\
	fo-property-border-end-color.c	\
	fo-property-border-end-color.h	\
	fo-property-border-end-precedence.c	\
	fo-property-border-end-precedence.h	\
	fo-property-border-end-style.c	\
	fo-property-border-end-style.h	\
	fo-property-border-end-width.c	\
	fo-property-border-end-width.h	\
	fo-property-border-left.c	\
	fo-property-border-left.h	\
	fo-property-border-left-color.c	\
	fo-property-border-left-color.h	\
	fo-property-border-left-style.c	\
	fo-property-border-left-style.h	\
	fo-property-border-left-width.c	\
	fo-property-border-left-width.h	\
	fo-property-border-right.c	\
	fo-property-border-right.h	\
	fo-property-border-right-color.c	\
	fo-property-border-right-color.h	\
	fo-property-border-right-style.c	\
	fo-property-border-right-style.h	\
	fo-property-border-right-width.c	\
	fo-property-border-right-width.h	\
	fo-property-border-separation.c	\
	fo-property-border-separation.h	\
	fo-property-border-start-color.c	\
	fo-property-border-start-color.h	\
	fo-property-border-start-precedence.c	\
	fo-property-border-start-precedence.h	\
	fo-property-border-start-style.c	\
	fo-property-border-start-style.h	\
	fo-property-border-start-width.c	\
	fo-property-border-start-width.h	\
	fo-property-border-style.c	\
	fo-property-border-style.h	\
	fo-property-border-top.c	\
	fo-property-border-top.h	\
	fo-property-border-top-color.c	\
	fo-property-border-top-color.h	\
	fo-property-border-top-style.c	\
	fo-property-border-top-style.h	\
	fo-property-border-top-width.c	\
	fo-property-border-top-width.h	\
	fo-property-border-width.c	\
	fo-property-border-width.h	\
	fo-property-border.c	\
	fo-property-border.h	\
	fo-property-border-private.h	\
	fo-property-break-after.c	\
	fo-property-break-after.h	\
	fo-property-break-before.c	\
	fo-property-break-before.h	\
	fo-property-character.c	\
	fo-property-character.h	\
	fo-property-clip.c	\
	fo-property-clip.h	\
	fo-property-column-number.c	\
	fo-property-column-number.h	\
	fo-property-column-width.c	\
	fo-property-column-width.h	\
	fo-property-content-height.c	\
	fo-property-content-height.h	\
	fo-property-content-type.c	\
	fo-property-content-type.h	\
	fo-property-content-width.c	\
	fo-property-content-width.h	\
	fo-property-direction.c		\
	fo-property-direction.h		\
	fo-property-display-align.c	\
	fo-property-display-align.h	\
	fo-property-end-indent.c	\
	fo-property-end-indent.h	\
	fo-property-extent.c		\
	fo-property-extent.h		\
	fo-property-flow-name.c		\
	fo-property-flow-name.h		\
	fo-property-format.c	\
	fo-property-format.h	\
	fo-property-grouping-separator.c	\
	fo-property-grouping-separator.h	\
	fo-property-grouping-size.c	\
	fo-property-grouping-size.h	\
	fo-property-height.c	\
	fo-property-height.h	\
	fo-property-id.c	\
	fo-property-id.h	\
	fo-property-inline-progression-dimension.c	\
	fo-property-inline-progression-dimension.h	\
	fo-property-inline-progression-dimension-minimum.c	\
	fo-property-inline-progression-dimension-minimum.h	\
	fo-property-inline-progression-dimension-optimum.c	\
	fo-property-inline-progression-dimension-optimum.h	\
	fo-property-inline-progression-dimension-maximum.c	\
	fo-property-inline-progression-dimension-maximum.h	\
	fo-property-keep-together.c	\
	fo-property-keep-together.h	\
	fo-property-keep-together-within-column.c	\
	fo-property-keep-together-within-column.h	\
	fo-property-keep-together-within-page.c	\
	fo-property-keep-together-within-page.h	\
	fo-property-keep-with-next.c	\
	fo-property-keep-with-next.h	\
	fo-property-keep-with-next-within-column.c	\
	fo-property-keep-with-next-within-column.h	\
	fo-property-keep-with-next-within-page.c	\
	fo-property-keep-with-next-within-page.h	\
	fo-property-keep-with-previous.c	\
	fo-property-keep-with-previous.h	\
	fo-property-keep-with-previous-within-column.c	\
	fo-property-keep-with-previous-within-column.h	\
	fo-property-keep-with-previous-within-page.c	\
	fo-property-keep-with-previous-within-page.h	\
	fo-property-letter-value.c	\
	fo-property-letter-value.h	\
	fo-property-linefeed-treatment.c	\
	fo-property-linefeed-treatment.h	\
	fo-property-line-stacking-strategy.c	\
	fo-property-line-stacking-strategy.h	\
	fo-property-margin-bottom.c	\
	fo-property-margin-bottom.h	\
	fo-property-margin-left.c	\
	fo-property-margin-left.h	\
	fo-property-margin-right.c	\
	fo-property-margin-right.h	\
	fo-property-margin-top.c	\
	fo-property-margin-top.h	\
	fo-property-margin.c		\
	fo-property-margin.h		\
	fo-property-master-name.c	\
	fo-property-master-name.h	\
	fo-property-master-reference.c	\
	fo-property-master-reference.h	\
	fo-property-media-usage.c	\
	fo-property-media-usage.h	\
	fo-property-number-columns-repeated.c	\
	fo-property-number-columns-repeated.h	\
	fo-property-number-columns-spanned.c	\
	fo-property-number-columns-spanned.h	\
	fo-property-number-rows-spanned.c	\
	fo-property-number-rows-spanned.h	\
	fo-property-orphans.c	\
	fo-property-orphans.h	\
	fo-property-overflow.c	\
	fo-property-overflow.h	\
	fo-property-padding-after.c	\
	fo-property-padding-after.h	\
	fo-property-padding-after-conditionality.c	\
	fo-property-padding-after-conditionality.h	\
	fo-property-padding-after-length.c	\
	fo-property-padding-after-length.h	\
	fo-property-padding-before.c	\
	fo-property-padding-before.h	\
	fo-property-padding-before-conditionality.c	\
	fo-property-padding-before-conditionality.h	\
	fo-property-padding-before-length.c	\
	fo-property-padding-before-length.h	\
	fo-property-padding-bottom.c	\
	fo-property-padding-bottom.h	\
	fo-property-padding-end.c	\
	fo-property-padding-end.h	\
	fo-property-padding-end-conditionality.c	\
	fo-property-padding-end-conditionality.h	\
	fo-property-padding-end-length.c	\
	fo-property-padding-end-length.h	\
	fo-property-padding-left.c	\
	fo-property-padding-left.h	\
	fo-property-padding-right.c	\
	fo-property-padding-right.h	\
	fo-property-padding-start.c	\
	fo-property-padding-start.h	\
	fo-property-padding-start-conditionality.c	\
	fo-property-padding-start-conditionality.h	\
	fo-property-padding-start-length.c	\
	fo-property-padding-start-length.h	\
	fo-property-padding-top.c	\
	fo-property-padding-top.h	\
	fo-property-padding.c	\
	fo-property-padding.h	\
	fo-property-page-height.c	\
	fo-property-page-height.h	\
	fo-property-page-width.c	\
	fo-property-page-width.h	\
	fo-property-provisional-distance-between-starts.c	\
	fo-property-provisional-distance-between-starts.h	\
	fo-property-provisional-label-separation.c	\
	fo-property-provisional-label-separation.h	\
	fo-property-ref-id.c	\
	fo-property-ref-id.h	\
	fo-property-region-name.c	\
	fo-property-region-name.h	\
	fo-property-role.c	\
	fo-property-role.h	\
	fo-property-scaling.c	\
	fo-property-scaling.h	\
	fo-property-scaling-method.c	\
	fo-property-scaling-method.h	\
	fo-property-score-spaces.c	\
	fo-property-score-spaces.h	\
	fo-property-source-document.c	\
	fo-property-source-document.h	\
	fo-property-space-after.c	\
	fo-property-space-after.h	\
	fo-property-space-after-minimum.c	\
	fo-property-space-after-minimum.h	\
	fo-property-space-after-optimum.c	\
	fo-property-space-after-optimum.h	\
	fo-property-space-after-maximum.c	\
	fo-property-space-after-maximum.h	\
	fo-property-space-after-precedence.c	\
	fo-property-space-after-precedence.h	\
	fo-property-space-after-conditionality.c	\
	fo-property-space-after-conditionality.h	\
	fo-property-space-before.c	\
	fo-property-space-before.h	\
	fo-property-space-before-minimum.c	\
	fo-property-space-before-minimum.h	\
	fo-property-space-before-optimum.c	\
	fo-property-space-before-optimum.h	\
	fo-property-space-before-maximum.c	\
	fo-property-space-before-maximum.h	\
	fo-property-space-before-precedence.c	\
	fo-property-space-before-precedence.h	\
	fo-property-space-before-conditionality.c	\
	fo-property-space-before-conditionality.h	\
	fo-property-space-end.c	\
	fo-property-space-end.h	\
	fo-property-space-end-minimum.c	\
	fo-property-space-end-minimum.h	\
	fo-property-space-end-optimum.c	\
	fo-property-space-end-optimum.h	\
	fo-property-space-end-maximum.c	\
	fo-property-space-end-maximum.h	\
	fo-property-space-end-precedence.c	\
	fo-property-space-end-precedence.h	\
	fo-property-space-end-conditionality.c	\
	fo-property-space-end-conditionality.h	\
	fo-property-space-start.c	\
	fo-property-space-start.h	\
	fo-property-space-start-minimum.c	\
	fo-property-space-start-minimum.h	\
	fo-property-space-start-optimum.c	\
	fo-property-space-start-optimum.h	\
	fo-property-space-start-maximum.c	\
	fo-property-space-start-maximum.h	\
	fo-property-space-start-precedence.c	\
	fo-property-space-start-precedence.h	\
	fo-property-space-start-conditionality.c	\
	fo-property-space-start-conditionality.h	\
	fo-property-span.c	\
	fo-property-span.h	\
	fo-property-src.c	\
	fo-property-src.h	\
	fo-property-start-indent.c	\
	fo-property-start-indent.h	\
	fo-property-table-layout.c	\
	fo-property-table-layout.h	\
	fo-property-text-align.c	\
	fo-property-text-align.h	\
	fo-property-text-indent.c	\
	fo-property-text-indent.h	\
	fo-property-unicode-bidi.c	\
	fo-property-unicode-bidi.h	\
	fo-property-white-space-collapse.c	\
	fo-property-white-space-collapse.h	\
	fo-property-white-space-treatment.c	\
	fo-property-white-space-treatment.h	\
	fo-property-widows.c	\
	fo-property-widows.h	\
	fo-property-width.c	\
	fo-property-width.h	\
	fo-property-wrap-option.c	\
	fo-property-wrap-option.h	\
	fo-property-writing-mode.c	\
	fo-property-writing-mode.h

# Properties that map to Pango attributes.
libfo_text_property_la_SOURCES =	\
	fo-property-util.c		\
	fo-property-util.h		\
	fo-property-text-property.c	\
	fo-property-text-property.h	\
	fo-property-common-font.c	\
	fo-property-common-font.h	\
	fo-property-alignment-adjust.c	\
	fo-property-alignment-adjust.h	\
	fo-property-alignment-baseline.c	\
	fo-property-alignment-baseline.h	\
	fo-property-background-color.c	\
	fo-property-background-color.h	\
	fo-property-baseline-shift.c	\
	fo-property-baseline-shift.h	\
	fo-property-color.c	\
	fo-property-color.h	\
	fo-property-dominant-baseline.c	\
	fo-property-dominant-baseline.h	\
	fo-property-font-family.c	\
	fo-property-font-family.h	\
	fo-property-font-size.c		\
	fo-property-font-size.h		\
	fo-property-font-stretch.c	\
	fo-property-font-stretch.h	\
	fo-property-font-style.c	\
	fo-property-font-style.h	\
	fo-property-font-variant.c	\
	fo-property-font-variant.h	\
	fo-property-font-weight.c	\
	fo-property-font-weight.h	\
	fo-property-keep-together-within-line.c	\
	fo-property-keep-together-within-line.h	\
	fo-property-keep-with-next-within-line.c	\
	fo-property-keep-with-next-within-line.h	\
	fo-property-keep-with-previous-within-line.c	\
	fo-property-keep-with-previous-within-line.h	\
	fo-property-line-height.c	\
	fo-property-line-height.h

libfo_text_property_la_CFLAGS = $(PANGO_CFLAGS)
libfo_text_property_la_LIBADD = $(PANGO_LIBS)
